# texture-downsample

./: .gitignore  pyproject.toml  requirements.txt
examples/: synthetic_demo.py  verify_v3_native4x_routed.py
examples/bench_out/: verify_v3.csv  verify_v3.md
pbr_compress/: __init__.py  analytic.py  baselines.py  brdf.py  cli.py  filters.py  io.py  metrics.py  optimize.py  pipeline.py  render.py
tests/: __init__.py  test_analytic.py  test_brdf.py  test_filters.py  test_io.py  test_pipeline.py
textures/: README.md
